--- a/SuperHeroSearch_WebApp/Views/_ViewImports.cshtml
+++ b/SuperHeroSearch_WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using SuperHeroSearch_WebApp
-@using SuperHeroSearch_WebApp.Models
+@using SuperHeroSearch_App.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
