--- a/SuperHeroSearch_WebApp/Views/Shared/_Layout.cshtml
+++ b/SuperHeroSearch_WebApp/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand comic-title text-light" asp-area="" asp-controller="Home" asp-action="Index">SuperHeroes & Villains Search</a>
+                <a class="navbar-brand comic-title text-light" asp-area="" asp-controller="Character" asp-action="Index">SuperHeroes & Villains Search</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
