Add link to detail page

--- a/SuperHeroSearch_WebApp/Views/Character/Index.cshtml
+++ b/SuperHeroSearch_WebApp/Views/Character/Index.cshtml
@@ -35,7 +35,7 @@
                                         </ul>
                                     </div>
                                     <div class="row justify-content-md-end justify-content-center m-0 p-3 w-100">
-                                        <a href="#" class="card-link w-100 btn btn-outline-primary">View details</a>
+                                        <a href="@Url.Action("Find", "Character", new { id = item.Id } )" class="card-link w-100 btn btn-outline-primary">View details</a>
                                     </div>
                                 </div>
                             </div>
